--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \\\"Error: no test specified\\\" && exit 1",
     "dev": "nodemon src/app.js",
-    "build": "app.js"
+    "build": "node app.js",
+    "start": "node app.js"
   },
   "keywords": [
     "[]"
